--- a/package.json
+++ b/package.json
@@ -2,11 +2,24 @@
   "name": "meddefi-new-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.18.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:production": "NODE_ENV=production next build",
+    "build:preview": "NODE_ENV=development next build", 
+    "build:staging": "NODE_ENV=staging next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "analyze": "ANALYZE=true npm run build",
+    "clean": "rm -rf .next out",
+    "prebuild": "npm run clean",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -38,6 +51,19 @@
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "webpack-bundle-analyzer": "^4.9.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [  
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
